-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.8.0
-
None
-
jom/5460afe9a2d9f4c94190d92eea5b188e52c1c80f
In some cases jom seems to return 0 even if there's an error in some submake call.
See https://codereview.qt-project.org/#change,78629
and
http://testresults.qt-project.org/ci/QtBase_dev_Integration/build_02124/winrt-x64-msvc2012_Windows_8/log.txt.gz
For Gerrit Dashboard: QTCREATORBUG-11556 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
79166,1 | fix exit code forwarding | master | qt-labs/jom | Status: MERGED | +2 | 0 |