fix exit code forwarding

In rare cases (failing blocking sub-make) the exit code is retrieved
from the Process object. Unfortunately Process::exitCode() always
returned 0, because the m_exitCode member wasn't set anywhere.

Task-number: QTCREATORBUG-11556
Change-Id: I92ea93cd8e369a12096d6acb23c67bf803f62737
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>